--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
               </a>
               <div class="nav-items">
                   <div class="search">
-                      <input type="text" class="search-box" placeholder="Buscar produto">
-                      <button class="search-btn">Buscar</button>
-                  </div>
-                  <a href="#"><img src="./imagens/perfil.png" alt="Perfil"></a>
-                  <a href="./cart.html"><img src="./imagens/carinho.png" alt="Carrinho"></a>
+                      <input type="text" class="search-box" placeholder="Search product">
+                      <button class="search-btn">Search</button>
+                  </div class="icons">
+                  <a href="./index.html"><i class="fa-solid fa-user fa-2xl" style="color: #000000;"></i></a>
+                  <a href="./checkout.html"><i class="fa-solid fa-cart-shopping fa-2xl" style="color: #000000;"></i></a>
               </div>
           </div>
       </nav>
       <ul class="links-container">
-          <li class="link-item"><a href="./index.html" class="link">Início</a></li>
-          <li class="link-item"><a href="./products.html" class="link">Feminino</a></li>
-          <li class="link-item"><a href="./products.html" class="link">Masculino</a></li>
-          <li class="link-item"><a href="./products.html" class="link">Acessórios</a></li>
-          <li class="link-item"><a href="./index.html" class="link">Sobre Nós</a></li>
+          <li class="link-item"><a href="./index.html" class="link">Home</a></li>
+          <li class="link-item"><a href="./products.html" class="link">Female</a></li>
+          <li class="link-item"><a href="./products.html" class="link">Male</a></li>
+          <li class="link-item"><a href="./products.html" class="link">Accessory</a></li>
+          <li class="link-item"><a href="./index.html" class="link">About Us</a></li>
       </ul>
     </header> 
 
@@ -64,10 +64,10 @@
     <div class="banner">
       <div class="banner-again">
         <div class="conteudo-banner">
-          <p id="nao-perca">NÃO PERCA</p>
-          <h2>SUA PROMOÇÃO ESPECIAL!</h2>
-          <p>Tudo isso foi especialmente feito para você</p>
-          <a href="./products.html"><button>Compre Agora!</button></a>
+          <p id="nao-perca">DON'T MISS OUT</p>
+          <h2>YOUR SPECIAL PROMOTION!</h2>
+          <p>This has all been specially made for you</p>
+          <a href="./products.html"><button>Shop Now!</button></a>
         </div>
           <div class="img-banner">
               <img src="imagens/Design sem nome(2).png" alt="">
@@ -75,26 +75,26 @@
       </div>
     </div>
 
-    <!-- Categorias -->
-    <h2 class="categoryh2">Categorias Populares</h2>
+    <!-- Categories -->
+    <h2 class="categoryh2">Popular Categories</h2>
     <div class="categories">
         <div class="category">
-            <img src="./imagens/feminino.png" alt="Feminino">
-            <h3>Feminino</h3>
-            <p>Confira nossa seleção de roupas femininas com descontos imperdíveis.</p>
-            <a href="./products.html"><button>Explorar</button></a>
+            <img src="./imagens/feminino.png" alt="Women's">
+            <h3>Women's</h3>
+            <p>Check out our selection of women's clothing with unbeatable discounts.</p>
+            <a href="./products.html"><button>Explore</button></a>
         </div>
         <div class="category">
-            <img src="./imagens/masculino.png" alt="Masculino">
-            <h3>Masculino</h3>
-            <p>Roupas masculinas com o estilo e conforto que você merece.</p>
-            <a href="./products.html"><button>Explorar</button></a>
+            <img src="./imagens/masculino.png" alt="Men's">
+            <h3>Men's</h3>
+            <p>Men's clothing with the style and comfort you deserve.</p>
+            <a href="./products.html"><button>Explore</button></a>
         </div>
         <div class="category">
-            <img src="./imagens/acessorios.png" alt="Acessórios">
-            <h3>Acessórios</h3>
-            <p>Os melhores acessórios perfeitos para complementar seu look.</p>
-            <a href="./products.html"><button>Explorar</button></a>
+            <img src="./imagens/acessorios.png" alt="Accessories">
+            <h3>Accessories</h3>
+            <p>The best accessories to complement your look.</p>
+            <a href="./products.html"><button>Explore</button></a>
         </div>
     </div>
 
@@ -107,29 +107,6 @@
       <button class="next">&raquo;</button>
     </section>
 
-      <div class="bannerSneaker">
-        <img src="images/Promotion-1.png"/>
-      </div>
-
-      <h1 id="best_sellers">Best sellers</h1>
-
-      <section id="section-2" class="section-product-carrousel">
-        <button class="prev">&laquo;</button>
-        <div class="carrousel">
-
-        </div>
-        <button class="next">&raquo;</button>
-      </section>
-
-      <h1 id="promotions">Promotions</h1>
-
-      <section id="section-3" class="section-product-carrousel">
-        <button class="prev">&laquo;</button>
-        <div class="carrousel">
-          
-        </div>
-        <button class="next">&raquo;</button>
-      </section>
     <!-- Inicio do footer -->
     <footer>
 
@@ -145,17 +122,17 @@
       <hr class="div-footer">
 
       <div class="footer-content">
-          <div>
-              <h4>Sobre Nós</h4>
-              <p>Somos uma empresa comprometida em oferecer os melhores produtos com foco na satisfação do cliente.</p>
-          </div>
-          <div class="payments">
-              <h4>Métodos de Pagamento</h4>
-              <div class="payments-icon">
-                  <i class="fab fa-cc-visa" style="font-size: 30px; margin-right: 10px;"></i>
-                  <i class="fab fa-cc-mastercard" style="font-size: 30px;"></i>
-              </div>
-          </div>
+        <div>
+            <h4>About Us</h4>
+            <p>We are a company committed to offering the best products with a focus on customer satisfaction.</p>
+        </div>
+        <div class="payments">
+            <h4>Payment Methods</h4>
+            <div class="payments-icon">
+                <i class="fab fa-cc-visa" style="font-size: 30px; margin-right: 10px;"></i>
+                <i class="fab fa-cc-mastercard" style="font-size: 30px;"></i>
+            </div>
+        </div>
       </div>
 
       <div class="DireitosReservados">
