--- a/adm.html
+++ b/adm.html
@@ -38,7 +38,7 @@
     <header class="header">
       <nav class="navbar">
           <div class="nav">
-              <a href="./index.html">
+              <a href="./adm.html">
                   <img src="./images/logo_alpha-.png" class="logo" alt="Logo">
               </a>
               <div class="nav-items">
@@ -79,7 +79,7 @@
       </article>
 
          <!-- Inicio do footer -->
-    <footer>
+    <footer class="footer-especial">
 
       <div class="redes-sociais">
           <a href="#"><img src="./images/logo_alpha-.png" alt="Lobo Alpha.co" width="221" height="90" loading="lazy"><a>
