--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
                         <input type="text" class="search-box" placeholder="Search product">
                         <button class="search-btn">Search</button>
                     </div class="icons">
-                    <a href="./login.html"><i class="fa-solid fa-user fa-2xl" style="color: #000000;"></i></a>
+                    <a href="./adm.html"><i class="fa-solid fa-user fa-2xl" style="color: #000000;"></i></a>
                     <a href="./checkout.html"><i class="fa-solid fa-cart-shopping fa-2xl" style="color: #000000;"></i></a>
                 </div>
             </div>
@@ -124,7 +124,7 @@
 </script>
 
            <!-- Inicio do footer -->
-    <footer>
+    <footer class="footer-especial">
 
         <div class="redes-sociais">
             <a href="#"><img src="./images/logo_alpha-.png" alt="Lobo Alpha.co" width="221" height="90" loading="lazy"><a>
