--- a/products.html
+++ b/products.html
@@ -47,7 +47,7 @@
                       <input type="text" class="search-box" placeholder="Search product">
                       <button class="search-btn">Search</button>
                   </div class="icons">
-                  <a href="./login.html"><i class="fa-solid fa-user fa-2xl" style="color: #000000;"></i></a>
+                  <a href="./adm.html"><i class="fa-solid fa-user fa-2xl" style="color: #000000;"></i></a>
                   <a href="./checkout.html"><i class="fa-solid fa-cart-shopping fa-2xl" style="color: #000000;"></i></a>
               </div>
           </div>
@@ -137,22 +137,9 @@
                 </div>
 
                 <div class="filter_category">
-                    <h4>Color</h4>
-                    <ul class="color_list">
-                        <li><div class="color_box" style="background-color: #FF5733;"></div> Red</li>
-                        <li><div class="color_box" style="background-color: #33FF57;"></div> Green</li>
-                        <li><div class="color_box" style="background-color: #3357FF;"></div> Blue</li>
-                        <li><div class="color_box" style="background-color: #F1C40F;"></div> Yellow</li>
-                        <li><div class="color_box" style="background-color: #8E44AD;"></div> Purple</li>
-                        <li><div class="color_box" style="background-color: #ffffff;"></div> White</li>
-                        <li><div class="color_box" style="background-color: #000000;"></div> Black</li>
-                    </ul>
-                </div>
-
-                <div class="filter_category">
                     <h4>Price</h4>
                     <label for="minPrice">Min: R$</label>
-                    <input type="number" id="minPrice" value="0" min="0">
+                    <input type="number" id="minPrice" value="1" min="0">
                     
                     <label for="maxPrice">Max: R$</label>
                     <input type="number" id="maxPrice" value="2000" min="0">
@@ -163,21 +150,11 @@
                   <input type="text" name="comments" id="input_comments" placeholder="Write what do you want in our store">
                 </div>
 
-                <div class="feedback-container">
-                  <h4>Rate our service:</h4>
-                  <div class="stars">
-                    <i class='bx bxs-star'></i>
-                    <i class='bx bxs-star'></i>
-                    <i class='bx bxs-star'></i>
-                    <i class='bx bxs-star'></i>
-                    <i class='bx bxs-star-half'></i>
-                  </div>
-                </div>
-                
-                <div class="store_name">
-                  <h4>©Stride Sneakers</h4>
-                </div>
           </div>
+          <!-- Componente Grid de Produtos -->
+          <section class="section-product-grid">
+            <!-- AREA RESERVADA PARA INSERCAO DOS CARDS DE PRODUTOS - NAO EXCLUIR -->
+          </section>
         </div>
       </section>     
     </main>
