--- a/checkout.html
+++ b/checkout.html
@@ -37,7 +37,7 @@
     <header class="header">
       <nav class="navbar">
           <div class="nav">
-              <a href="./index.html">
+              <a href="./adm.html">
                   <img src="./images/logo_alpha-.png" class="logo" alt="Logo">
               </a>
               <div class="nav-items">
