--- a/product.html
+++ b/product.html
@@ -47,7 +47,7 @@
                       <input type="text" class="search-box" placeholder="Search product">
                       <button class="search-btn">Search</button>
                   </div class="icons">
-                  <a href="./login.html"><i class="fa-solid fa-user fa-2xl" style="color: #000000;"></i></a>
+                  <a href="./adm.html"><i class="fa-solid fa-user fa-2xl" style="color: #000000;"></i></a>
                   <a href="./checkout.html"><i class="fa-solid fa-cart-shopping fa-2xl" style="color: #000000;"></i></a>
               </div>
           </div>
