--- a/checkout.html
+++ b/checkout.html
@@ -59,7 +59,7 @@
       </ul>
     </header>
 
-    <main class="product main-content container">
+    <main class="product_main-content_container">
         <div class="product text-container">
             <h2 class="main-text">Checkout</h2>
             <p>Verifique os itens do carrinho e finalize a compra</p>
@@ -104,25 +104,6 @@
                
               </form>
             </div>
-
-            <div class="freight_pricing container-flex">
-              <div class="radio">
-                <input type="radio" name="" id="">
-              </div>
-              <div class="pricing">
-                <h3>48x de R$ 2.062,00</h3>
-                <p>Entrega em até 45 dias uteis</p>
-              </div>
-            </div>
-
-            <div class="freight_pricing container-flex">
-              <div class="radio">
-                <input type="radio" name="" id="">
-              </div>
-              <div class="pricing">
-                <h3>À vista R$ 89.000,00</h3>
-                <p>Entrega em até 20 dias uteis</p>
-              </div>
             </div>
             </div>
           </div>
@@ -131,7 +112,7 @@
     </main>
 
            <!-- Inicio do footer -->
-    <footer>
+    <footer class="footer-especial">
 
       <div class="redes-sociais">
           <a href="#"><img src="./images/logo_alpha-.png" alt="Lobo Alpha.co" width="221" height="90" loading="lazy"><a>
