--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li class="link-item"><a href="./products.html" class="link">Female</a></li>
           <li class="link-item"><a href="./products.html" class="link">Male</a></li>
           <li class="link-item"><a href="./products.html" class="link">Accessory</a></li>
-          <li class="link-item"><a href="./index.html" class="link">About Us</a></li>
+          <li class="link-item"><a href="./about_us.html" class="link">About Us</a></li>
       </ul>
     </header> 
 
