--- a/payment.html
+++ b/payment.html
@@ -19,7 +19,7 @@
   </head>
   <!-- Start of body -->
   <body>
-    <!-- Header -->
+    <!-- Cabeçalho -->
     <header class="header">
       <nav class="navbar">
           <div class="nav">
@@ -30,9 +30,10 @@
                   <div class="search">
                       <input type="text" class="search-box" placeholder="Search product">
                       <button class="search-btn">Search</button>
-                  </div class="icons">
-                  <a href="./adm.html"><i class="fa-solid fa-user fa-2xl" style="color: #000000;"></i></a>
-                  <a href="./checkout.html"><i class="fa-solid fa-cart-shopping fa-2xl" style="color: #000000;"></i></a>
+                      <div class="icons">
+                        <a href="./adm.html"><i class="fa-solid fa-user fa-2xl" style="color: #000000;"></i></a>
+                        <a href="./checkout.html"><i class="fa-solid fa-cart-shopping fa-2xl" style="color: #000000;"></i></a>
+                    </div>                    
               </div>
           </div>
       </nav>
