--- a/products.html
+++ b/products.html
@@ -20,32 +20,33 @@
     </head>
     <!-- Inicio do body -->
     <body>
-    <!-- Cabeçalho -->
-    <header class="header">
-      <nav class="navbar">
-          <div class="nav">
-              <a href="./index.html">
-                  <img src="./images/logo_alpha-.png" class="logo" alt="Logo">
-              </a>
-              <div class="nav-items">
-                  <div class="search">
-                      <input type="text" class="search-box" placeholder="Search product">
-                      <button class="search-btn">Search</button>
-                  </div class="icons">
-                  <a href="./adm.html"><i class="fa-solid fa-user fa-2xl" style="color: #000000;"></i></a>
-                  <a href="./checkout.html"><i class="fa-solid fa-cart-shopping fa-2xl" style="color: #000000;"></i></a>
-              </div>
-          </div>
-      </nav>
-      <ul class="links-container">
-          <li class="link-item"><a href="./index.html" class="link">Home</a></li>
-          <li class="link-item"><a href="./products.html" class="link">Female</a></li>
-          <li class="link-item"><a href="./products.html" class="link">Male</a></li>
-          <li class="link-item"><a href="./products.html" class="link">Accessory</a></li>
-          <li class="link-item"><a href="./about_us.html" class="link">About Us</a></li>
-      </ul>
-    </header>
-
+      <!-- Cabeçalho -->
+      <header class="header">
+        <nav class="navbar">
+            <div class="nav">
+                <a href="./index.html">
+                    <img src="./images/logo_alpha-.png" class="logo" alt="Logo">
+                </a>
+                <div class="nav-items">
+                    <div class="search">
+                        <input type="text" class="search-box" placeholder="Search product">
+                        <button class="search-btn">Search</button>
+                        <div class="icons">
+                          <a href="./adm.html"><i class="fa-solid fa-user fa-2xl" style="color: #000000;"></i></a>
+                          <a href="./checkout.html"><i class="fa-solid fa-cart-shopping fa-2xl" style="color: #000000;"></i></a>
+                      </div>                    
+                </div>
+            </div>
+        </nav>
+        <ul class="links-container">
+            <li class="link-item"><a href="./index.html" class="link">Home</a></li>
+            <li class="link-item"><a href="./products.html" class="link">Female</a></li>
+            <li class="link-item"><a href="./products.html" class="link">Male</a></li>
+            <li class="link-item"><a href="./products.html" class="link">Accessory</a></li>
+            <li class="link-item"><a href="./about_us.html" class="link">About Us</a></li>
+        </ul>
+      </header>
+      
       <!-- Componente Grid de Produtos -->
         <!-- AREA RESERVADA PARA INSERCAO DOS CARDS DE PRODUTOS - NAO EXCLUIR -->
 
