--- a/checkout.html
+++ b/checkout.html
@@ -35,9 +35,10 @@
                   <div class="search">
                       <input type="text" class="search-box" placeholder="Search product">
                       <button class="search-btn">Search</button>
-                  </div class="icons">
-                  <a href="./adm.html"><i class="fa-solid fa-user fa-2xl" style="color: #000000;"></i></a>
-                  <a href="./checkout.html"><i class="fa-solid fa-cart-shopping fa-2xl" style="color: #000000;"></i></a>
+                      <div class="icons">
+                        <a href="./adm.html"><i class="fa-solid fa-user fa-2xl" style="color: #000000;"></i></a>
+                        <a href="./checkout.html"><i class="fa-solid fa-cart-shopping fa-2xl" style="color: #000000;"></i></a>
+                    </div>                    
               </div>
           </div>
       </nav>
@@ -49,6 +50,7 @@
           <li class="link-item"><a href="./about_us.html" class="link">About Us</a></li>
       </ul>
     </header>
+    
     <main class="product_main-content_container">
         <div class="product text-container">
             <h2 class="main-text">Checkout</h2>
